Fix spacing on location text.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -230,10 +230,11 @@ hr.small {
 .location {
     display: table;
     width: 100%;
-    height: 120px;
+    height: 10px;
     color: #000;
     font-family: 'Comfortaa', cursive;
     background: ;
+    padding-bottom:10px;
     -webkit-background-size: auto;
     -moz-background-size: auto;
     background-size: auto;
